server/droneserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: drone.jon.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: droneserver
            port: 
              number: 80
